packages/fortifier-macros-tests/tests/validations/length/conflict_max_fail.stderr
error: `equal` and `max` are conflicting parameters
 --> tests/validations/length/conflict_max_fail.rs:5:16
  |
5 |     #[validate(length(equal = 1, max = 2))]
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^
